--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="./src/assets/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SIMS</title>
-  <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 </head>
 
 <body>
